--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "tw-elements": "^1.0.0-alpha13",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
